@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               No-Worries
-version:            0.2
+version:            0.2_1
 abstract:           coding without worries
 author:
     - Lionel Cons <lionel.cons@cern.ch>
