@@ -13,7 +13,7 @@
 package No::Worries;
 use strict;
 use warnings;
-our $VERSION  = "0.2";
+our $VERSION  = "0.2_1";
 our $REVISION = sprintf("%d.%02d", q$Revision: 1.17 $ =~ /(\d+)\.(\d+)/);
 
 #
